# websocket-engine

./: .gitignore  CMakeLists.txt  main.cpp
include/ws/: Buffer.h  EventLoopThread.h  EventLoopThreadPool.h  String.h  TcpConnection.h  TcpServer.h  WebSocketConnection.h  WebSocketServer.h  WebsocketServer.h  util.h
libs/: libhttp_parser.2.9.2.dylib
src/: Buffer.cpp  EventLoopThread.cpp  EventLoopThreadPool.cpp  TcpConnection.cpp  TcpServer.cpp  WebSocketConnection.cpp  WebSocketServer.cpp  WebsocketServer.cpp  http_parser.c
test/: CMakeLists.txt  buffer_test.cpp  test_string.cpp
test/autobahn/: fuzzingclient.json  fuzzingclient_2.json  fuzzingclient_3_4.json  fuzzingclient_5.json
